tests/tldk/error/error-tldk-test-error23.pkt
0.000 socket(..., SOCK_STREAM, IPPROTO_TCP) = 3
0.000 fcntl(3, F_GETFL) = 0x2 (flags O_RDWR)
0.000 fcntl(3, F_SETFL, O_RDWR|O_NONBLOCK) = 0

// Establish connection and verify that there was no error.
+0 connect(3, ..., ...) = -1 EINPROGRESS (Operation now in progress)
0.100 > S 0:0(0) <...>

+0 < S. 1:1601(1600) ack 1 win 40606 <wscale 118,eol>
+0.1 > . 1:1(0) ack 1 <...>
+0 fcntl(3, F_SETFL, O_RDWR|O_NONBLOCK) = 0

+0 < . 1:3471(3470) ack 1 win 110 <nop, eol, eol, eol>
+0  > . 1:1(0) ack 3471 <...>